--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://patrocinio.ddns.net:3000/patrocinio/websocket-chat-test.git"
+    "url": "https://github.com/joaopatrocinio/websocket-chat-test.git"
   },
   "author": "João Patrocínio",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mysql": "^2.15.0",
+    "mysql": "^2.16.0",
     "socket.io": "^2.1.1"
   }
 }
